--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -9,6 +9,7 @@ $black-btn-color: #2a394b;
 
 // Text Color
 $white-text-color: #ffffff;
+$black-text-color: #414141;
 
 // Header Colors
 $header-color: #ffffff;
@@ -23,3 +24,10 @@ $main-color: #f7f7f7;
 // Create Note Colors
 $create-note-ctnr-color: #ffffff;
 $create-note-ctnr-border-color: #d6d6d6;
+
+// Summary Note Colors
+$summary-note-ctnr-color: #ffffff;
+$summary-note-ctnr-border-color: #d6d6d6;
+
+// Select Summary Note Check Color
+$summary-note-check-color: #81c7e4;
