Mod: gray-btn-color 추가

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,6 +6,7 @@ $split-color: #f0f0f0;
 
 // Button Colors
 $black-btn-color: #2a394b;
+$gray-btn-color: #767676;
 
 // Text Color
 $white-text-color: #ffffff;
