Mod: title 드래그 방지 (user-slect none)

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -24,6 +24,8 @@ header {
 				align-items: center;
 				margin: 0 25px;
 				color: $header-logo-color;
+				user-select: none;
+
 				.logo {
 					font-size: 1.1rem;
 					margin-right: 10px;
