Mod: detail note color 추가

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -32,3 +32,6 @@ $summary-note-ctnr-border-color: #d6d6d6;
 
 // Select Summary Note Check Color
 $summary-note-check-color: #81c7e4;
+
+// Detail Note Colors
+$detail-note-color: #ffffff;
