Mod: absolute_center_wh mixin 추가

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -20,3 +20,10 @@
 @mixin default_border_radius {
 	border-radius: 3px;
 }
+
+@mixin absoulte_center_wh {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+}
