Mod: scrollbar-thumb-color 추가

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -12,6 +12,9 @@ $gray-btn-color: #767676;
 $white-text-color: #ffffff;
 $black-text-color: #414141;
 
+// Scrollbar-thumb Color
+$scrollbar-thumb-color: #d6d6d6;
+
 // Header Colors
 $header-color: #ffffff;
 $header-logo-color: #f8613b;
