--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -26,3 +26,9 @@ $summary-note-height: 330px;
 // Detail Note Sizes
 $detail-note-width: $create-note-ctnr-width; // 550px
 $detail-note-min-height: 150px;
+
+// Scrollbar
+$summary-note-scrollbar-width: 4px;
+
+// Block Sizes
+$summary-block-width: 213px;
