--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,7 +1,10 @@
 @import '../../styles/variables.scss';
 
 main {
-	min-height: $main-min-height;
+	height: $main-height;
 	background-color: $main-color;
 	padding: $header-height 20px;
+	overflow-y: scroll;
+
+	@include default_scrollbar;
 }
