Mod: scrollbar 색상 변경, confirm bgc 추가

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -13,7 +13,7 @@ $white-text-color: #ffffff;
 $black-text-color: #414141;
 
 // Scrollbar-thumb Color
-$scrollbar-thumb-color: #d6d6d6;
+$scrollbar-thumb-color: #c7c7c7;
 
 // Header Colors
 $header-color: #ffffff;
@@ -38,3 +38,6 @@ $summary-note-check-color: #81c7e4;
 
 // Detail Note Colors
 $detail-note-color: #ffffff;
+
+// Confirm Colors
+$confirm-bgc: #ffffff;
