Mod: main 스크롤바 사용에 따른 main-height 변경

--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -6,7 +6,7 @@ $search_cntr_height: 30px;
 $search_cntr_width: 380px;
 
 // Main Size
-$main-min-height: calc(100vh - $header-height);
+$main-height: 100vh;
 
 // Create Note Sizes
 $create-note-height: 100px;
