--- a/src/components/CreateBlocks/CreateBlocks.scss
+++ b/src/components/CreateBlocks/CreateBlocks.scss
@@ -1,22 +1,70 @@
 @import '../../styles/_variables.scss';
 
-.block {
+.create_block {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	background-color: transparent;
-	padding: 10px;
+	padding: 10px 15px;
 	height: fit-content;
 	.text_block_textarea {
-		width: 400px;
 		resize: none;
-		overflow: hidden;
+		overflow-y: hidden;
 		@include rm_input_style;
-		font-size: 1rem;
-		line-height: 20px;
+		font-size: 0.9rem;
+		line-height: 21px;
+		color: $input-value-gray-color;
+		width: 430px;
+
+		&::placeholder {
+			color: $input-value-default-color;
+		}
 	}
 
-	button {
-		@include rm_btn_style;
+	.checklist {
+		display: flex;
+		justify-content: space-between;
+		gap: 10px;
+		width: 430px;
+
+		.checkbox {
+			display: none;
+		}
+		.checkbox_label {
+			margin-top: 3px;
+		}
+		.checklist_block_textarea {
+			flex-grow: 1;
+			resize: none;
+			overflow-y: hidden;
+			@include rm_input_style;
+			font-size: 0.9rem;
+
+			line-height: 21px;
+			color: $input-value-gray-color;
+
+			&::placeholder {
+				color: $input-value-default-color;
+			}
+		}
+	}
+
+	.btns {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		gap: 10px;
+		button {
+			display: none;
+		}
+	}
+
+	&:hover {
+		background-color: $hover-block-bgc;
+		button {
+			display: inline-block;
+			@include rm_btn_style;
+			color: $gray-btn-color;
+			background-color: transparent;
+		}
 	}
 }
