Mod: title font-weight 수정, content 영역 height fit-content로 변경

--- a/src/components/CreateNote/CreateNoteForm.scss
+++ b/src/components/CreateNote/CreateNoteForm.scss
@@ -17,7 +17,7 @@
 			height: 25px;
 			width: 450px;
 			font-size: 1.1rem;
-			font-weight: 300;
+			font-weight: 400;
 
 			/* 
       font-weight 더 얇게 지정 불가 -> font setting 해야함
@@ -32,7 +32,8 @@
 	}
 
 	.content {
-		min-height: $create-note-ctnr-height;
+		// min-height: $create-note-ctnr-height;
+		height: fit-content;
 	}
 
 	.ctrl_bar {
