Mod: $input-value-gray-color 추가

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,6 @@
 // Input Value Defualt Color
 $input-value-default-color: #414141;
+$input-value-gray-color: #767676;
 
 // Split Color in a Note
 $split-color: #f0f0f0;
@@ -41,3 +42,6 @@ $detail-note-color: #ffffff;
 
 // Confirm Colors
 $confirm-bgc: #ffffff;
+
+// Block Colors
+$hover-block-bgc: #f1f9fc;
