--- a/src/components/UpdateNote/UpdateNote.scss
+++ b/src/components/UpdateNote/UpdateNote.scss
@@ -9,7 +9,6 @@
 	display: flex;
 	flex-direction: column;
 	user-select: none;
-
 	.title {
 		display: flex;
 		justify-content: space-between;
@@ -41,9 +40,12 @@
 	}
 
 	.content {
-		flex-grow: 1;
+		max-height: 428px;
 		border-top: 1px solid $split-color;
 		border-bottom: 1px solid $split-color;
+		overflow-y: scroll;
+
+		@include default_scrollbar;
 	}
 
 	.ctrl_bar {
