Mod: .read_img_block에 대한 max-width 100% 추가

--- a/src/components/ReadBlocks/ReadBlocks.scss
+++ b/src/components/ReadBlocks/ReadBlocks.scss
@@ -30,6 +30,10 @@
 			overflow: hidden;
 		}
 	}
+
+	.read_img_block {
+		max-width: 100%;
+	}
 }
 
 .read_block.detail {
@@ -63,5 +67,9 @@
 			line-height: 17px;
 			@include newline;
 		}
+	}
+
+	.read_img_block {
+		max-width: 100%;
 	}
 }
