Mod: Content area 공통 max-height

--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -32,3 +32,6 @@ $summary-note-scrollbar-width: 4px;
 
 // Block Sizes
 $summary-block-width: 213px;
+
+// Content-Area (blocks)
+$content-max-height: 460px;
