--- a/src/components/DetailNote/DetailNote.scss
+++ b/src/components/DetailNote/DetailNote.scss
@@ -38,7 +38,7 @@
 		border-top: 1px solid $split-color;
 		border-bottom: 1px solid $split-color;
 		padding: 10px 15px;
-		max-height: 550px;
+		max-height: $content-max-height;
 		overflow-y: scroll;
 		@include default_scrollbar;
 	}
