Mod: block-location-indicator-color 파란색으로 변경

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -45,4 +45,4 @@ $confirm-bgc: #ffffff;
 
 // Block Colors
 $hover-block-bgc: #f1f9fc;
-$block-location-indicator-color: #f8613b;
+$block-location-indicator-color: rgba(0, 122, 204, 0.8);
