Mod: 일부 kebab case 수정

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -22,8 +22,8 @@
 	}
 
 	.search_ctnr {
-		width: $search_cntr_width;
-		height: $search_cntr_height;
+		width: $search-cntr-width;
+		height: $search-cntr-height;
 		display: flex;
 		align-items: center;
 		background-color: $search-bg-color;
