Mod: 일부 snake_case -> kebab-case

--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -2,8 +2,8 @@
 
 // Header Size
 $header-height: 45px;
-$search_cntr_height: 30px;
-$search_cntr_width: 380px;
+$search-cntr-height: 30px;
+$search-cntr-width: 380px;
 
 // Main Size
 $main-height: 100vh;
