Mod: content -> checklist-content로 className 수정

--- a/src/components/ReadBlocks/ReadBlocks.scss
+++ b/src/components/ReadBlocks/ReadBlocks.scss
@@ -22,7 +22,7 @@
 				display: none;
 			}
 		}
-		.content {
+		.checklist-content {
 			flex-grow: 1;
 			color: $black-text-color;
 			font-weight: 300;
@@ -60,7 +60,7 @@
 				display: none;
 			}
 		}
-		.content {
+		.checklist-content {
 			flex-grow: 1;
 			color: $black-text-color;
 			font-weight: 300;
