--- a/src/components/UpdateNote/UpdateNote.scss
+++ b/src/components/UpdateNote/UpdateNote.scss
@@ -16,6 +16,7 @@
 		align-items: center;
 		padding: 10px 15px;
 		height: 50px;
+		border-bottom: 1px solid $split-color;
 
 		.title_input {
 			@include rm_input_style;
@@ -44,29 +45,26 @@
 		max-height: $content-max-height;
 		overflow-y: scroll;
 		@include default_scrollbar;
-
-		border-top: 1px solid $split-color;
-		border-bottom: 1px solid $split-color;
 	}
 
-	.ctrl_bar {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-		height: 50px;
-		padding: 10px 15px;
+	// .ctrl_bar {
+	// 	display: flex;
+	// 	justify-content: space-between;
+	// 	align-items: center;
+	// 	height: 50px;
+	// 	padding: 10px 15px;
 
-		.add_btns {
-			display: flex;
-		}
-		.update_submit_btn {
-			@include rm_btn_style;
-			background-color: $black-btn-color;
-			font-weight: 400;
-			color: $white-text-color;
-			font-size: 0.8rem;
-			padding: 0 13px;
-			height: 30px;
-		}
-	}
+	// 	.add_btns {
+	// 		display: flex;
+	// 	}
+	// 	.update_submit_btn {
+	// 		@include rm_btn_style;
+	// 		background-color: $black-btn-color;
+	// 		font-weight: 400;
+	// 		color: $white-text-color;
+	// 		font-size: 0.8rem;
+	// 		padding: 0 13px;
+	// 		height: 30px;
+	// 	}
+	// }
 }
