Mod: ctnr -> container로 수정

--- a/src/components/CreateCtrlBar/CreateCtrlBar.scss
+++ b/src/components/CreateCtrlBar/CreateCtrlBar.scss
@@ -1,7 +1,7 @@
 @import '../../styles/_variables.scss';
 
 .ctrl_bar {
-	height: $create-note-ctnr-height;
+	height: $create-note-container-height;
 	padding: 7px 10px;
 	border-top: 1px solid $split-color;
 	display: flex;
