--- a/src/components/CreateNoteForm/CreateNoteForm.scss
+++ b/src/components/CreateNoteForm/CreateNoteForm.scss
@@ -1,14 +1,14 @@
 @import '../../styles/_variables.scss';
 
 .create_note_form {
-	width: $create-note-ctnr-width;
-	background-color: $create-note-ctnr-color;
-	border: 1px solid $create-note-ctnr-border-color;
+	width: $create-note-container-width;
+	background-color: $create-note-container-color;
+	border: 1px solid $create-note-container-border-color;
 	@include default_border_radius;
 	margin: $create-note-form-margin;
 
 	.title {
-		height: $create-note-ctnr-height;
+		height: $create-note-container-height;
 		border-bottom: 1px solid $split-color;
 		padding: 10px 15px;
 
