--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -21,7 +21,7 @@
 	border-radius: 3px;
 }
 
-@mixin absoulte_center_wh {
+@mixin absolute_center_wh {
 	position: absolute;
 	left: 50%;
 	top: 50%;
