--- a/src/components/UpdateNote/UpdateNote.scss
+++ b/src/components/UpdateNote/UpdateNote.scss
@@ -1,7 +1,7 @@
 @import '../../styles/_variables.scss';
 
 .update_note {
-	@include absoulte_center_wh;
+	@include absolute_center_wh;
 	@include default_border_radius;
 	background-color: $detail-note-color;
 	width: $detail-note-width;
@@ -45,26 +45,6 @@
 		max-height: $content-max-height;
 		overflow-y: scroll;
 		@include default_scrollbar;
+		min-height: 50px;
 	}
-
-	// .ctrl_bar {
-	// 	display: flex;
-	// 	justify-content: space-between;
-	// 	align-items: center;
-	// 	height: 50px;
-	// 	padding: 10px 15px;
-
-	// 	.add_btns {
-	// 		display: flex;
-	// 	}
-	// 	.update_submit_btn {
-	// 		@include rm_btn_style;
-	// 		background-color: $black-btn-color;
-	// 		font-weight: 400;
-	// 		color: $white-text-color;
-	// 		font-size: 0.8rem;
-	// 		padding: 0 13px;
-	// 		height: 30px;
-	// 	}
-	// }
 }
