--- a/src/components/SummaryNote/SummaryNote.scss
+++ b/src/components/SummaryNote/SummaryNote.scss
@@ -1,6 +1,6 @@
 @import '../../styles/_variables.scss';
 
-.summary_note {
+.summary-note {
 	width: $summary-note-width;
 	height: $summary-note-height;
 	background-color: $summary-note-container-color;
@@ -11,79 +11,4 @@
 	position: relative;
 	z-index: 1;
 	user-select: none;
-
-	.summary_area {
-		height: 280px;
-		overflow-x: hidden;
-		@include default_scrollbar;
-
-		.summary_area_content {
-			padding: 0 20px;
-
-			.summary_title {
-				margin-top: 30px;
-				margin-bottom: 20px;
-				font-size: 1.2rem;
-				font-weight: 400;
-				color: $black-text-color;
-				@include newline;
-				width: $summary-block-width;
-			}
-		}
-	}
-
-	.ctrl_area {
-		height: 50px;
-		display: flex;
-		justify-content: flex-end;
-
-		.del_summary_note_btn,
-		.now_select_off_btn {
-			display: none;
-		}
-
-		.now_select_on_btn {
-			@include rm_btn_style;
-			position: absolute;
-			right: -25px;
-			top: -15px;
-			display: block;
-			cursor: pointer;
-			z-index: 3;
-		}
-
-		.now_select_on_outline {
-			position: absolute;
-			left: 0;
-			right: 0;
-			top: 0;
-			@include default_border_radius;
-			border: 3px solid $summary-note-check-color;
-			width: $summary-note-width + 2px;
-			height: $summary-note-height + 2px;
-			z-index: 2;
-		}
-	}
-
-	&:hover {
-		.ctrl_area {
-			.del_summary_note_btn {
-				@include rm_btn_style;
-				display: block;
-				cursor: pointer;
-				z-index: 3;
-				margin-right: 10px;
-				margin-top: 10px;
-			}
-
-			.now_select_off_btn {
-				@include rm_btn_style;
-				position: absolute;
-				right: -25px;
-				top: -15px;
-				display: block;
-				cursor: pointer;
-			}
-		}
-	}
 }
