Mod: snake case -> kebab case 수정

--- a/src/components/CheckBoxInput/CheckBoxInput.scss
+++ b/src/components/CheckBoxInput/CheckBoxInput.scss
@@ -1,8 +1,8 @@
 @import '../../styles/_variables.scss';
 
-.checkbox_input {
+.checkbox-input {
 	display: none;
 }
-.checkbox_label {
+.checkbox-label {
 	margin-top: 3px;
 }
