--- a/src/components/CreateBlock/CreateBlock.scss
+++ b/src/components/CreateBlock/CreateBlock.scss
@@ -1,6 +1,6 @@
 @import '../../styles/_variables.scss';
 
-.create_block {
+.create-block {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
