--- a/src/components/CreateNoteArea/CreateNoteArea.scss
+++ b/src/components/CreateNoteArea/CreateNoteArea.scss
@@ -1,6 +1,6 @@
 @import '../../styles/variables.scss';
 
-.create_note_area {
+.create-note-area {
 	background-color: transparent;
 	min-height: $create-note-height;
 	display: flex;
