--- a/src/components/CreateTextBlock/CreateTextBlock.scss
+++ b/src/components/CreateTextBlock/CreateTextBlock.scss
@@ -1,6 +1,6 @@
 @import '../../styles/_variables.scss';
 
-.text_block_textarea {
+.text-block-textarea {
 	resize: none;
 	overflow-y: hidden;
 	@include rm_input_style;
