--- a/src/components/HeaderArea/HeaderArea.scss
+++ b/src/components/HeaderArea/HeaderArea.scss
@@ -7,7 +7,7 @@ header {
 	right: 0;
 	z-index: 99;
 
-	.header_fixed {
+	.header-fixed {
 		background-color: $header-color;
 		height: $header-height;
 
