--- a/src/components/ReadTextBlock/ReadTextBlock.scss
+++ b/src/components/ReadTextBlock/ReadTextBlock.scss
@@ -1,5 +1,5 @@
 @import '../../styles/_variables.scss';
-.read_text_block {
+.read-text-block {
 	@include newline;
 	font-size: 0.9rem;
 	color: $black-text-color;
