--- a/src/components/AddBlockBtn/AddBlockBtn.scss
+++ b/src/components/AddBlockBtn/AddBlockBtn.scss
@@ -1,6 +1,6 @@
 @import '../../styles/_variables.scss';
 
-.add_btn_icon_container {
+.add-btn-icon-container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
