--- a/src/components/BlockCtrlBtns/BlockCtrlBtns.scss
+++ b/src/components/BlockCtrlBtns/BlockCtrlBtns.scss
@@ -1,5 +1,5 @@
 @import '../../styles/_variables.scss';
-.create_block {
+.create-block {
 	.block-ctrl-btns {
 		display: flex;
 		justify-content: center;
