--- a/src/components/CtrlWindowBtn/CtrlWindowBtn.scss
+++ b/src/components/CtrlWindowBtn/CtrlWindowBtn.scss
@@ -1,12 +1,12 @@
 @import '../../styles/_variables.scss';
 
-.window_ctrl {
+.window-ctrl {
 	padding-right: 15px;
-	.ctrl_window_btn {
+	.ctrl-window-btn {
 		width: 27px;
 		@include rm_btn_style;
 		color: $search-color;
-		.ctrl_window_btn_icon:hover {
+		.ctrl-window-btn-icon:hover {
 			color: $header-ctrl-hover-color;
 			transition: 0.2s;
 		}
