--- a/src/components/DetailNote/DetailNote.scss
+++ b/src/components/DetailNote/DetailNote.scss
@@ -10,7 +10,7 @@
 	flex-direction: column;
 	user-select: none;
 
-	.title_container {
+	.title-container {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
@@ -29,12 +29,12 @@
 			line-height: 25px;
 		}
 
-		.close_btn {
+		.close-btn {
 			@include rm_btn_style;
 		}
 	}
 
-	.ctrl_bar {
+	.detail-note-ctrl-bar {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
@@ -42,12 +42,12 @@
 		padding: 10px 15px;
 		border-top: 1px solid $split-color;
 
-		.delete_btn {
+		.delete-btn {
 			@include rm_btn_style;
 			padding-left: 0;
 			padding-top: 4px;
 		}
-		.edit_btn {
+		.edit-btn {
 			@include rm_btn_style;
 			background-color: $black-btn-color;
 			font-weight: 400;
