--- a/src/components/NotesHeader/NotesHeader.scss
+++ b/src/components/NotesHeader/NotesHeader.scss
@@ -1,18 +1,23 @@
 @import '../../styles/_variables.scss';
 
-.note_header {
-	.cancel_btn {
-		@include rm_btn_style;
-		margin: 7px 15px 0 20px;
+.note-header {
+	.align-left {
+		display: flex;
+		align-items: center;
+
+		.cancel-btn {
+			@include rm_btn_style;
+			margin: 7px 15px 0 20px;
+		}
+
+		.selected-note-count {
+			color: $black-text-color;
+			font-size: 1rem;
+			font-weight: 400;
+		}
 	}
 
-	.selected_note_count {
-		color: $black-text-color;
-		font-size: 1rem;
-		font-weight: 400;
-	}
-
-	.delete_btn {
+	.delete-btn {
 		@include rm_btn_style;
 		margin-right: 10px;
 		margin-top: 5px;
