--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,44 +1,50 @@
 @import '../../styles/variables.scss';
 
-.align-left {
+.default-header {
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
 
-	.title-container {
+	.align-left {
 		display: flex;
 		align-items: center;
-		margin: 0 25px;
-		color: $header-logo-color;
-		user-select: none;
 
-		.logo {
-			font-size: 1.1rem;
-			margin-right: 10px;
-		}
-		.title {
-			font-size: 0.8rem;
-			font-weight: 500;
-		}
-	}
+		.title-container {
+			display: flex;
+			align-items: center;
+			margin: 0 25px;
+			color: $header-logo-color;
+			user-select: none;
 
-	.search-container {
-		width: $search-container-width;
-		height: $search-container-height;
-		display: flex;
-		align-items: center;
-		background-color: $search-bg-color;
-		border-radius: 15px;
-		padding: 0 10px;
-
-		.search-input {
-			color: $search-color;
-			font-size: 0.9rem;
-			flex-grow: 1;
-			@include rm_input_style;
-			&::placeholder {
-				color: black;
+			.logo {
+				font-size: 1.1rem;
+				margin-right: 10px;
+			}
+			.title {
+				font-size: 0.8rem;
 				font-weight: 500;
+			}
+		}
+
+		.search-container {
+			width: $search-container-width;
+			height: $search-container-height;
+			display: flex;
+			align-items: center;
+			background-color: $search-bg-color;
+			border-radius: 15px;
+			padding: 0 10px;
+
+			.search-input {
+				color: $search-color;
 				font-size: 0.9rem;
+				flex-grow: 1;
+				@include rm_input_style;
+				&::placeholder {
+					color: black;
+					font-weight: 500;
+					font-size: 0.9rem;
+				}
 			}
 		}
 	}
