Mod: min-width 870px 추가, 필요 없는 header-fixed 선택자 제거
- 카드 3개가 보이는 부분 까지로 제한

--- a/src/components/HeaderArea/HeaderArea.scss
+++ b/src/components/HeaderArea/HeaderArea.scss
@@ -1,18 +1,13 @@
 @import '../../styles/_variables.scss';
 
 header {
+	min-width: $header-min-width;
 	position: fixed;
 	top: 0;
 	left: 0;
 	right: 0;
 	z-index: 99;
 
-	.header-fixed {
-		background-color: $header-color;
-		height: $header-height;
-
-		display: flex;
-		align-items: center;
-		justify-content: space-between;
-	}
+	background-color: $header-color;
+	height: $header-height;
 }
