--- a/src/styles/_sizes.scss
+++ b/src/styles/_sizes.scss
@@ -4,7 +4,7 @@
 $header-height: 45px;
 $search-container-height: 30px;
 $search-container-width: 380px;
-
+$header-min-width: 870px;
 // Main Size
 $main-height: 100vh;
 
