Mod: drag-layout-root 스타일 지정

--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,13 @@ code {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+
+#drag-layout-root {
+	position: fixed;
+	pointer-events: none;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 100;
+}
