--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -38,8 +38,8 @@
 	top: 0;
 	left: 0;
 	right: 0;
-	width: 100vw;
-	height: 100vh;
+	width: 100%;
+	height: 100%;
 	background: rgba(245, 245, 245, 0.6);
 	z-index: 100;
 	overflow-y: hidden;
