Mod: create-block-color 추가

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -39,6 +39,7 @@ $summary-note-check-color: #81c7e4;
 
 // Detail Note Colors
 $detail-note-color: #ffffff;
+$create-block-color: #ffffff;
 
 // Confirm Colors
 $confirm-bgc: #ffffff;
