--- a/src/components/DetailNote/DetailNote.scss
+++ b/src/components/DetailNote/DetailNote.scss
@@ -9,6 +9,7 @@
 	display: flex;
 	flex-direction: column;
 	user-select: none;
+	border: 1px solid $create-note-container-border-color;
 
 	.title-container {
 		display: flex;
