--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -1,6 +1,6 @@
 @import '../../styles/variables.scss';
 
-main {
+.main {
 	height: $main-height;
 	background-color: $main-color;
 	padding: $header-height 20px;
