--- a/src/components/ReadChecklistBlock/ReadChecklistBlock.scss
+++ b/src/components/ReadChecklistBlock/ReadChecklistBlock.scss
@@ -5,8 +5,8 @@
 	justify-content: space-between;
 	align-items: center;
 	gap: 10px;
-	.stopPropagation-el {
-		align-self: flex-start;
+	.stop-propagation {
+		// align-self: flex-start;
 		margin-top: 3px;
 	}
 }
