--- a/src/components/UpdateNote/UpdateNote.scss
+++ b/src/components/UpdateNote/UpdateNote.scss
@@ -11,7 +11,7 @@
 	user-select: none;
 	border: 1px solid $create-note-container-border-color;
 
-	.title {
+	.title-box {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
