--- a/src/components/DragBlockLayer/DragBlockLayer.scss
+++ b/src/components/DragBlockLayer/DragBlockLayer.scss
@@ -1,14 +1,17 @@
 @import '../../styles/_variables.scss';
 
-.block-drag-layer-ctrl-btns {
+.drag-layer-ctrl-btns {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	gap: 22px;
-	margin-right: 5px;
+	margin-right: 20px;
 }
 
-.block-drag-layer {
+.drag-layer {
 	width: 546px;
 	opacity: 1;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
