--- a/src/components/SummaryNote/SummaryNote.scss
+++ b/src/components/SummaryNote/SummaryNote.scss
@@ -11,4 +11,59 @@
 	position: relative;
 	z-index: 1;
 	user-select: none;
+
+	.summary-note-ctrl-bar {
+		height: 50px;
+		display: flex;
+		justify-content: flex-end;
+
+		.delete-btn,
+		.now-select-off-btn {
+			display: none;
+		}
+
+		.now-select-on-btn {
+			@include rm_btn_style;
+			position: absolute;
+			right: -25px;
+			top: -15px;
+			display: block;
+			cursor: pointer;
+			z-index: 3;
+		}
+
+		.now-select-on-outline {
+			position: absolute;
+			left: 0;
+			right: 0;
+			top: 0;
+			@include default_border_radius;
+			border: 3px solid $summary-note-check-color;
+			width: $summary-note-width + 2px;
+			height: $summary-note-height + 2px;
+			z-index: 2;
+		}
+	}
+
+	&:hover {
+		.summary-note-ctrl-bar {
+			.delete-btn {
+				@include rm_btn_style;
+				display: block;
+				cursor: pointer;
+				z-index: 3;
+				margin-right: 10px;
+				margin-top: 10px;
+			}
+
+			.now-select-off-btn {
+				@include rm_btn_style;
+				position: absolute;
+				right: -25px;
+				top: -15px;
+				display: block;
+				cursor: pointer;
+			}
+		}
+	}
 }
