--- a/src/components/SummaryNoteThumbnail/SummaryNoteThumbnail.scss
+++ b/src/components/SummaryNoteThumbnail/SummaryNoteThumbnail.scss
@@ -1,14 +1,14 @@
 @import '../../styles/_variables.scss';
 
-.summary-note-thumbnail-container {
+.container {
 	position: relative;
-	.summary-note-thumbnail {
+	.thumbnail {
 		width: 100%;
 		height: 130px;
 		object-fit: cover;
 		border-radius: 3px;
 	}
-	.summary-note-img-count {
+	.img-count {
 		@include absolute_center_wh;
 		width: 50px;
 		height: 50px;
