Mod: 이미지 블럭 유저 드래깅 막기, 포커스 outline 설정
- user-slect none
- -webkit-user-darg none
- 트위니 오렌지 색의 둥글한 outline

--- a/src/components/CreateImgBlock/CreateImgBlock.scss
+++ b/src/components/CreateImgBlock/CreateImgBlock.scss
@@ -2,4 +2,11 @@
 
 .img {
 	max-width: 430px;
+	user-select: none;
+	-webkit-user-drag: none;
+}
+
+.img:focus {
+	outline: $twinny-orange solid 3px;
+	border-radius: 3px;
 }
