--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,3 +1,3 @@
-@import './colors.scss';
-@import './mixins.scss';
-@import './sizes.scss';
+@import './_colors.scss';
+@import './_mixins.scss';
+@import './_sizes.scss';
