Mod: $twinny-orange 값 추가

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,4 +1,6 @@
-// Input Value Defualt Color
+$twinny-orange: #f8613b;
+
+// Input Value Default Color
 $input-value-default-color: #414141;
 $input-value-gray-color: #767676;
 
