--- a/src/components/CreateCtrlBar/CreateCtrlBar.scss
+++ b/src/components/CreateCtrlBar/CreateCtrlBar.scss
@@ -2,7 +2,7 @@
 
 .ctrl-bar {
 	height: 50px;
-	padding: 7px 10px;
+	padding: 10px 15px;
 	border-top: 1px solid $split-color;
 	display: flex;
 	justify-content: space-between;
@@ -18,6 +18,6 @@
 		color: $white-text-color;
 		font-size: 0.8rem;
 		padding: 0 13px;
-		margin-right: 10px;
+		height: 30px;
 	}
 }
