Mod: detailNote와 updateNote 간의 스타일 맞춤을 위해 수정
- detailNote flex-grow: 1 제거
- detailNote min-height 45px 추가

--- a/src/components/ReadBlocks/ReadBlocks.scss
+++ b/src/components/ReadBlocks/ReadBlocks.scss
@@ -1,7 +1,7 @@
 @import '../../styles/_variables.scss';
 
 .detail-note {
-	flex-grow: 1;
+	min-height: 45px;
 	padding: 10px 15px;
 	max-height: $content-max-height;
 	overflow: hidden;
